# thinking-with-types

./: .stylish-haskell.yaml  README.md
.github/workflows/: haskell.yml
haskell/: LICENSE  haskell.cabal
haskell/src/: Chapter1.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter14.hs  Chapter15.hs  Chapter15Singletons.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs  Main.hs
kotlin/: .gitignore  build.gradle  settings.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/learn/org/thinking_with_types/one/: Exercises.kt  ExtraExercise.kt
kotlin/src/test/kotlin/: chapterOne.kt
