name:                haskell
version:             0.1.0.0
synopsis:            Solutions to the exercises of Thinking With Types
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Flavio Corpa
maintainer:          flavio.corpa@47deg.com
copyright:           2019 © Flavio Corpa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , QuickCheck
